[package]
name = "hyperoperation"
description = "Hyperoperation (sometimes known as Knuth's notation) calculation library for Rust"
repository = "https://github.com/FireFragment/hyperoperation-rs"
license = "GPL-3.0-or-later"
keywords = ["math", "knuth", "hyperoperation", "power", "arithmetic"]
categories = ["mathematics", "science"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-iter = "0.1.43"
num-traits = "0.2.15"

[dev-dependencies]
num-bigint = "0.4.3"
